# wormhole

./: .gitignore  biome.json  bun.lockb  lefthook.yml  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts  wormhole.code-workspace
.changes/: config.json  config.schema.json
.github/workflows/: ci.yml  version-or-publish.yml
plugins/application/: README.md  package.json  tsup.config.ts  wormhole.json
plugins/application/src/: apps.ts  db.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/db/: commands.rs  constants.rs  schema.rs
src-tauri/src/settings/: constants.rs  store.rs
src-tauri/src/system/: commands.rs
src-tauri/src/utils/: result.rs
src/search/: index.html  index.tsx
src/search/api/: plugins.ts
src/search/routes/(root)/: index.tsx
src/settings/: index.html  index.tsx
src/settings/components/ui/nav-bar/: index.ts  nav-bar.tsx
src/settings/routes/about/: index.tsx
src/settings/routes/database/: index.tsx
src/settings/styles/: global.css
