[package]
name = "wormhole"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wormhole_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.63"
anyhow = "1.0.87"
fuzzy-matcher = "0.3.7"
tauri-plugin-devtools = "2.0.0-rc"
powershell_script = "1.1.0"
indoc = "2.0.5"
lnk = "0.5.1"
configparser = "3.1.0"
tauri-plugin-log = "2.0.0-rc"
log = "0.4.22"
rust-ini = "0.21.1"
image = "0.25.2"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
